vlib/v/checker/tests/asm_mov_requires_two_operands.vv
fn main() {
	asm amd64 {
		mov
	}
}
